<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInfo"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <androidx.cardview.widget.CardView
      app:cardCornerRadius="100dp"
      android:layout_width="150dp"
      android:layout_height="150dp">
      <ImageView
          android:id="@+id/info_activity_profile_image"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scaleType="centerCrop"
          android:src="@drawable/person_icon" />

  </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/info_activity_take_photo_text_btn"
        android:onClick="takePhoto"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:layout_margin="@dimen/space_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/take_photo"/>


    <EditText
        android:id="@+id/user_name_et"
        android:layout_margin="@dimen/space_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_et_hint"/>
    <EditText
        android:id="@+id/user_bio_et"
        android:layout_margin="@dimen/space_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_bio_et_hint"/>
    <EditText
        android:id="@+id/data_of_birth_et"
        android:layout_margin="@dimen/space_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth_et_hint"/>
    <EditText
        android:inputType="number"
        android:id="@+id/posts_no_et"
        android:layout_margin="@dimen/space_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/posts_number_et_hint"/>
    <EditText
        android:inputType="number"
        android:id="@+id/followers_no_et"
        android:layout_margin="@dimen/space_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/followers_numbers_et_hint"/>
    <EditText
        android:id="@+id/following_no_et"
        android:layout_margin="@dimen/space_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/following_numbers_et_hint"
        android:inputType="number" />
    <androidx.appcompat.widget.AppCompatButton
        android:textAllCaps="false"
        android:text="@string/add_user_profile"
        android:id="@+id/info_activity_add_user_profile_info_btn"
        android:layout_margin="@dimen/space_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>