<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <LinearLayout
           android:layout_marginHorizontal="10dp"
           android:orientation="vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <ImageView
               android:src="@mipmap/ic_launcher"
               android:id="@+id/final_user_profile_photo"
               android:layout_width="110dp"
               android:layout_height="120dp"/>
           <Button
               android:layout_marginVertical="10dp"
               android:layout_gravity="center"
               app:backgroundTint="@null"
               android:background="@drawable/btn"
               android:id="@+id/follow_btn"
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:text="@string/follow"/>

       </LinearLayout>

            <LinearLayout
                android:layout_marginHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>
                    <TextView
                        android:id="@+id/user_name_value"
                        android:paddingHorizontal="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio"/>
                    <TextView
                        android:id="@+id/user_bio_value"
                        android:paddingHorizontal="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_birth"/>
                    <TextView
                        android:id="@+id/user_date_value"
                        android:paddingHorizontal="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posts"/>
                    <TextView
                        android:id="@+id/user_posts_value"
                        android:paddingHorizontal="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"/>
                    <TextView
                        android:id="@+id/user_followers_value"
                        android:paddingHorizontal="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"/>
                    <TextView
                        android:id="@+id/user_following_value"
                        android:paddingHorizontal="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />



            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>